--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+  
+    <form id='form' action="">
+        <input id="user_guess" type="number">
+        <input type="submit">
+    </form>
+
     <script src="app.js"></script>
 </body>
 </html>
